<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="20dp" />

        <ImageButton
            android:id="@+id/photoButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@android:drawable/ic_menu_camera" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveInternalStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="140dp"
                android:onClick="saveInternal"
                android:text="@string/save_to_internal_storage" />

            <Button
                android:id="@+id/shareFromInternal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="150dp"
                android:onClick="shareInternal"
                android:text="@string/share_to_internal_storage" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveExternalStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="150dp"
                android:onClick="saveExternal"
                android:text="@string/save_to_external_storage" />


            <Button
                android:id="@+id/shareFromExternal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxWidth="150dp"
                android:onClick="shareExternal"
                android:text="@string/share_to_external_storage" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>